<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMyBusinessFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:textDirection="locale">

                <TextView
                    android:id="@+id/textview_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/business_category_string"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textDirection="locale"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinner_business_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:background="@drawable/inputs_back"
                    android:entries="@array/business_categories"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:gravity="center_horizontal|center_vertical"
                    android:textAlignment="gravity"
                    android:textDirection="locale" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/customer_name"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textDirection="locale"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edit_text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/inputs_back"
                    android:ems="10"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:gravity="center_horizontal|center_vertical"
                    android:inputType="textPersonName"
                    android:maxLength="120"
                    android:textAlignment="gravity"
                    android:textDirection="locale"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:foregroundGravity="center_vertical|center_horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/business_describe_string"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textDirection="locale"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_text_business_describe"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/backgroung_for_ll"
                android:ems="50"
                android:foregroundGravity="center_vertical|center_horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:inputType="textMultiLine"
                android:textAlignment="gravity"
                android:textDirection="locale"
                tools:ignore="SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/customer_phone_number_string"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textDirection="locale"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/inputs_back"
                    android:ems="10"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:gravity="center_horizontal|center_vertical"
                    android:inputType="phone"
                    android:textAlignment="gravity"
                    android:textDirection="locale"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <ScrollView
                android:id="@+id/scroll_view_policy"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_politique_string" />

                    <RadioGroup
                        android:id="@+id/radio_group_buttons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:foregroundGravity="center_vertical|center_horizontal"
                            android:gravity="center_horizontal|center_vertical"
                            android:padding="8dp"
                            android:text="@string/text_view_accept_policy_string"
                            android:textAlignment="viewStart"
                            android:textAllCaps="false"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:foregroundGravity="center_vertical|center_horizontal"
                            android:gravity="center_horizontal|center_vertical"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radio_button_yes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:text="@string/radio_button_yes_string" />

                            <RadioButton
                                android:id="@+id/radio_button_no"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:enabled="false"
                                android:text="@string/radio_button_no_string" />
                        </LinearLayout>

                    </RadioGroup>
                </LinearLayout>
            </ScrollView>

            <TextView
                android:id="@+id/edit_text_error_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:foregroundGravity="center_vertical|center_horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:padding="8dp"
                android:textAllCaps="false"
                android:textColor="@color/design_default_color_error"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_add_business_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:enabled="true"
                android:text="@string/add_business_phone_number_string"
                android:textAllCaps="false"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>